test/valid/head-only.mjml
<!-- Valid MJML with head elements only (no body content) -->
<!-- Expected: ZERO diagnostics -->
<mjml>
  <mj-head>
    <mj-title>Title only email</mj-title>
    <mj-preview>Preview text here</mj-preview>
    <mj-font name="Open Sans" href="https://fonts.googleapis.com/css?family=Open+Sans" />
    <mj-breakpoint width="480px" />
    <mj-attributes>
      <mj-all font-family="Open Sans, sans-serif" />
      <mj-class name="highlight" background-color="#ffffcc" />
    </mj-attributes>
    <mj-style>
      body { margin: 0; }
    </mj-style>
  </mj-head>
  <mj-body />
</mjml>
